--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <h1>andy's website</h1>
-    <h4>✮ nuclear waste architecture noises ✮</h4><br>
+    <h1>website</h1>
+    <h4>remind me to put my resume here sometime</h4><br>
     <div style="footer">
-      <h6>no copyright, only copyleft</h6>
-      <h6>made with &lt;3, 2020</h6>
+      <h6>made with &lt;3, 2022</h6>
     </div>
   </body>
 </html>
