--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h1>website</h1>
-    <h4>remind me to put my resume here sometime</h4><br>
+    <h4>do the impossible</h4><br>
     <div style="footer">
-      <h6>made with &lt;3, 2022</h6>
+      <h6>made with &lt;3, 2023</h6>
     </div>
   </body>
 </html>
